import "common.proto";
package rtidb.api;

option cc_generic_services = true;
option java_package = "com._4paradigm.rtidb.api";
option java_outer_classname = "SQLProcedure";

message ProcedureInfo {
    optional string db_name = 1;
    optional string sp_name = 2;
    optional string sql = 3;
    repeated rtidb.common.ColumnDesc input_schema = 4;
    repeated rtidb.common.ColumnDesc output_schema = 5;
}

message CreateProcedureRequest {
    optional ProcedureInfo sp_info = 1;
}

message ShowProcedureRequest {
    optional string db_name = 1;
    optional string sp_name = 2;
}

message ShowProcedureResponse {
    optional int32 code = 1;
    optional string msg = 2;
    repeated ProcedureInfo sp_info = 3;
}

message DropProcedureRequest {
    optional string db_name = 1;
    optional string sp_name = 2;
}

